profile setup of goole login

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -49,9 +49,12 @@
                                         <div id="passwordError" class="error-message" style="color: red;"></div>
                                     </div>
                                     <div class="col-md-8">
-                                        <div class="check-box">
+                                        <!-- <div class="check-box">
                                             <input type="checkbox" id="remember_me">
                                             <label for="remember_me">Remember me</label>
+                                        </div> -->
+                                        <div class="forgotton-password_info">
+                                            <a href="/register">Don't have an account?</a>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
