--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -72,8 +72,7 @@
         <thead>
             <tr>
                 <th>SL.No</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th>User Name</th>
                 <th>Email</th>
                 <th>Contact</th>
                 <th>Status</th>
@@ -84,8 +83,7 @@
             <% users.forEach((user, index) => { %>
             <tr>
                 <td><%= index + 1 %></td>
-                <td><%= user.firstName %></td>
-                <td><%= user.lastName %></td>
+                <td><%= user.userName %></td>
                 <td><%= user.email %></td>
                 <td><%= user.phone %></td>
                 <td><%= user.status ? "Active" : "Inactive" %></td>
