order placing and confirm order

--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -172,9 +172,8 @@
                 <% } %>
               </div>
   
-            <button class="proceed-btn">
-              Proceed To Buy
-            </button>
+            <a href="/placingorder"><button class="proceed-btn">Proceed To Buy</button>
+          </a>
           </div>
         </div>
       </div>
